V8 Makefile fixes for OS X

--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -8,6 +8,10 @@
 
 include $(POCO_BASE)/build/rules/global
 
+export CFLAGS
+export CXXFLAGS
+export LINKFLAGS
+
 V8VERSION = 3.28.4
 GYPREVISION = 1831
 V8BASE = v8-$(V8VERSION)
@@ -51,7 +55,10 @@ $(error Unknown target architecture)
 endif
 
 ifeq ($(findstring clang,$(CXX)),clang)
-GYP_DEFINES += clang=1
+GYP_DEFINES += clang=1 
+ifeq ($(OSNAME),Darwin)
+GYP_DEFINES += mac_deployment_target=10.9
+endif
 CXX += -Wno-tautological-undefined-compare -Wno-inconsistent-missing-override -Wno-shift-negative-value
 endif
 
