--- a/platform/OSP/JS/Makefile-Bundle
+++ b/platform/OSP/JS/Makefile-Bundle
@@ -14,7 +14,7 @@ objects = JSBundleActivator
 
 target         = com.appinf.osp.js
 target_version = 1
-target_libs    = PocoOSPJS PocoJSNet PocoJSData PocoJSBridge PocoJSCore PocoOSP PocoRemotingNG PocoNet PocoUtil PocoXML PocoData PocoFoundation v8
+target_libs    = PocoOSPJS PocoJSBridge PocoJSCore PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation v8
 
 postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles JS.bndlspec
 
